<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ClienteActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="118dp"
        android:layout_height="115dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/detalhe_cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="179dp"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:text="@string/detalhes_clientes"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/cliente1"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/cliente2"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="294dp"
        android:layout_height="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/detalhe_empresaSys"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="297dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/detalhe_empresaRsm"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
</android.support.constraint.ConstraintLayout>